--- a/css/main.css
+++ b/css/main.css
@@ -34,6 +34,10 @@ header h1 {
 
 /***About***/
 
+#about {
+    height: 300px;
+}
+
 #about h2 {
     text-align: center;
 }
@@ -49,8 +53,9 @@ header h1 {
 /***Contact***/
 
 #contact {
-    margin: 0;
-    background-color: #3366ff;
+    height: 500px;
+    background: url('../img/background2.jpg');
+    background-size: cover;
 }
 
 #contact h3 {
@@ -65,6 +70,7 @@ header h1 {
 #contact ul li {
      display: inline-block;
 }
+
 #contact ul img {
     font-size: 32px;
     padding-left: 105px;
@@ -74,9 +80,8 @@ header h1 {
 #contact h2 {
     font-size: 46px;
     text-align: center;
-    color: #cc33ff;
+    color: black;
     margin: 0 ;
-    padding-top: 35px;
     font-family: 'Balthazar', serif;
 }
 
