add box stylr for RWD to CSS

--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,18 @@
+* {
+  box-sizing: border-box;
+}
+
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+[class*="col-"] {
+  float: left;
+  padding: 15px;
+}
+
 /***** GRID ******/
 
 .full-width {
