--- a/css/main.css
+++ b/css/main.css
@@ -16,7 +16,7 @@
 /****Header****/
 
 header {
-    background: url('../img/background.jpg');
+    background: url('../img/background3.jpg');
     background-size: cover;
     height: 978px;
     margin: 0 auto;
