--- a/css/main.css
+++ b/css/main.css
@@ -16,7 +16,7 @@
 /****Header****/
 
 header {
-    background: url('../img/background4.jpg');
+    background: url('../img/82.jpg');
     background-size: cover;
     height: 978px;
     font-size: 20px;
