--- a/css/main.css
+++ b/css/main.css
@@ -77,7 +77,7 @@ header h1 {
 }
 
 #contact h2 {
-    color: black;
+    color: white;
     font-size: 46px;
     font-family: 'Balthazar', serif;
     text-align: center;
