--- a/css/main.css
+++ b/css/main.css
@@ -57,7 +57,7 @@ header h1 {
 }
 
 #contact h3 {
-    color: #3366ff;
+    color: white;
     font-family: 'Balthazar', serif;
     font-size: 30px;
     margin: 0 ;
