--- a/css/main.css
+++ b/css/main.css
@@ -93,8 +93,7 @@ header h1 {
 }
 
 #email-header {
-    padding-left: 185px;
-    text-decoration: none;
+    text-align: center;
 }
 
 #socialmedia-header {
