--- a/css/main.css
+++ b/css/main.css
@@ -107,9 +107,14 @@ header h1 {
 
 
 /***Footer***/
+footer {
+  height: 15px;
+  margin: 0 auto;
+}
 
 footer h5 {
     text-align: center;
+    margin: 0 auto;
 }
 
 footer a {
