--- a/css/main.css
+++ b/css/main.css
@@ -29,8 +29,8 @@ header h1 {
 }
 
 header p {
-     color: #cc33ff;
-     margin-top: 200px;
+     color: #51402e;
+     margin-top: 250px;
 }
 
 /***About***/
