--- a/css/main.css
+++ b/css/main.css
@@ -30,7 +30,7 @@ header {
     width: 100%;
     height: auto;
     min-height: 900px;
-    font-size: 20px;
+    font-size: 1.25em;
 }
 
 header h1 {
