adjust header font

--- a/css/main.css
+++ b/css/main.css
@@ -14,7 +14,7 @@
 }
 
 body {
-  font-size: 1em;
+  font-size: 16px;
 }
 
 html {
@@ -36,6 +36,7 @@ header {
 header h1 {
     color: #51402e;
     margin: -15px 0 0 0;
+    
 }
 
 header p {
