--- a/css/main.css
+++ b/css/main.css
@@ -26,11 +26,10 @@ html {
 
 header {
     background: url('../img/82.jpg');
-    background-size: cover;
     width: 100%;
-    height: auto;
-    min-height: 900px;
-    font-size: 1.25em;
+    height: 900px;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 header h1 {
