--- a/css/main.css
+++ b/css/main.css
@@ -79,7 +79,7 @@ header p {
     font-family: 'Balthazar', serif;
     font-size: 30px;
     margin: 0 ;
-    padding-top: 20px;
+    padding-top: 20%;
     text-align: center;   
 }
 
@@ -102,16 +102,8 @@ header p {
     margin: 0 ;
 }
 
-#contact .third-width {
-    color: white;
-}
-
 #hire-invite {
     padding-left: 190px;
-}
-
-#email-header {
-    text-align: center;
 }
 
 #socialmedia-header {
