--- a/css/main.css
+++ b/css/main.css
@@ -83,6 +83,15 @@ header p {
     text-align: center;   
 }
 
+#contact h4 {
+    color: white;
+    font-family: 'Balthazar', serif;
+    font-size: 30px;
+    margin: 0 ;
+    padding-top: 10%;
+    text-align: center;   
+}
+
 #contact ul li {
     display: inline-block;
     width: 100%;
@@ -104,10 +113,6 @@ header p {
 
 #hire-invite {
     padding-left: 190px;
-}
-
-#socialmedia-header {
-    text-align: center;
 }
 
 #invitation {
