--- a/css/main.css
+++ b/css/main.css
@@ -13,12 +13,23 @@
   padding: 15px;
 }
 
-body {
-  font-size: 16px;
-}
-html  {
-  font-size: 16px;
-}
+body, html {
+    font-size: 16px;
+    height: 100%;
+  }
+       .parallax {
+  /* The image used */
+        background-image: url("img_parallax.jpg");
+
+  /* Full height */
+        height: 100%; 
+
+  /* Create the parallax scrolling effect */
+        background-attachment: fixed;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        }
 
 /****Header****/
 
