--- a/css/main.css
+++ b/css/main.css
@@ -17,23 +17,24 @@ body, html {
     font-size: 16px;
     height: 100%;
   }
-       .parallax {
+  
+  .parallax {
   /* The image used */
-        background-image: url("img_parallax.jpg");
+    background-image: url('../img/82.jpg');
 
   /* Full height */
-        height: 100%; 
+    height: 100%; 
 
   /* Create the parallax scrolling effect */
-        background-attachment: fixed;
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: cover;
-        }
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    }
 
 /****Header****/
 
-header {
+/***header {
     background: url('../img/82.jpg');
     width: 100%;
     height: 900px;
