--- a/css/main.css
+++ b/css/main.css
@@ -20,7 +20,7 @@ body, html {
   
   .parallax {
   /* The image used */
-    background-image: url('../img/82.jpg');
+    background-image: url("../img/82.jpg");
 
   /* Full height */
     height: 100%; 
