--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-* {
+/** {
   box-sizing: border-box;
 }
 
@@ -12,15 +12,15 @@
   float: left;
   padding: 15px;
 }
+**/
 
 body, html {
-    font-size: 16px;
     height: 100%;
   }
   
   .parallax {
   /* The image used */
-    background-image: url("../img/82.jpg");
+    background-image: url('../img/82.jpg');
 
   /* Full height */
     height: 100%; 
@@ -32,121 +32,6 @@ body, html {
     background-size: cover;
     }
 
-/****Header****/
-
-/***header {
-    background: url('../img/82.jpg');
-    width: 100%;
-    height: 900px;
-    background-size: cover;
-    background-repeat: no-repeat;
-}
-
-header h1 {
-    color: #51402e;
-    margin: -15px 0 0 0;
-    font-size: 2.75em;
-}
-
-header p {
-     color: #51402e;
-     margin-top: 22%;
-     font-weight: bolder;
-     font-size: 20.5px;
-
-}
-
-/***About***/
-
-#about {
-    height: auto;
-}
-
-#about h2 {
-    font-size: 40px;
-    text-align: center;
-    margin: 0 auto;
-}
-
-#about h3 {
-    text-align: center;
-    font-size: 22px;
-}
-
-#about p {
-    font-size: 16px;
-    text-align: center;
-}
-
-/***Contact***/
-
-#contact {
-    background: url('../img/background2.jpg');
-    background-size: cover;
-    height: 500px;
-}
-
-#contact h3 {
-    color: white;
-    font-family: 'Balthazar', serif;
-    font-size: 30px;
-    margin: 0 ;
-    padding-top: 20%;
-    text-align: center;   
-}
-
-#contact h4 {
-    color: white;
-    font-family: 'Balthazar', serif;
-    font-size: 30px;
-    margin: 0 ;
-    padding-top: 10%;
-    text-align: center;   
-}
-
-#contact ul li {
-    display: inline-block;
-    width: 100%;
-}
-
-#contact ul img {
-    font-size: 32px;
-    padding-left: 240px;
-    padding-top: 15px;
-}
-
-#contact h2 {
-    color: white;
-    font-size: 46px;
-    font-family: 'Balthazar', serif;
-    text-align: center;
-    margin: 0 ;
-}
-
-#hire-invite {
-    padding-left: 190px;
-}
-
-#invitation {
-    padding-left: 90px
-}
-
-
-/***Footer***/
-footer {
-  height: 15px;
-  margin: 0 auto;
-}
-
-footer h5 {
-    text-align: center;
-    margin: 0 auto;
-}
-
-footer a {
-    color: #51402e;
-    text-decoration: none;
-}
 
 /* For mobile phones: */
 [class*="col-"] {
