--- a/css/main.css
+++ b/css/main.css
@@ -32,6 +32,13 @@ body, html {
     background-size: cover;
     }
 
+header {
+    background: white;
+    position: absolute;
+    top: 2%;
+    width: 100%;
+    height: 100px;
+}
 
 /* For mobile phones: */
 [class*="col-"] {
