--- a/css/main.css
+++ b/css/main.css
@@ -34,10 +34,15 @@ body, html {
 
 header {
     background: white;
+    opacity: .5;
     position: absolute;
     top: 2%;
     width: 100%;
     height: 100px;
+}
+
+header h1 {
+  margin: 1%;
 }
 
 /* For mobile phones: */
