--- a/css/main.css
+++ b/css/main.css
@@ -16,6 +16,7 @@
 
 body, html {
     height: 100%;
+    font-size: 16px;
   }
   
   .parallax {
@@ -43,6 +44,7 @@ header {
 
 header h1 {
   margin: 1%;
+  font-size: 3em;
 }
 
 /* For mobile phones: */
