--- a/css/main.css
+++ b/css/main.css
@@ -47,6 +47,19 @@ header h1 {
   font-size: 3em;
 }
 
+#services {
+    background: white;
+    position: absolute;
+    top: 52%;
+    width: 100%;
+    height: 600px;
+}
+
+#services p {
+  margin: 1%;
+  font-size: 2em;
+}
+
 /* For mobile phones: */
 [class*="col-"] {
   width: 100%;
