--- a/css/main.css
+++ b/css/main.css
@@ -86,6 +86,54 @@ header h1 {
     text-align: center;
 }
 
+/***Contact***/
+
+#contact {
+    background: url('../img/background2.jpg');
+    background-size: cover;
+    position: absolute;
+    top: 192%;
+    width: 100%;
+    height: auto;
+}
+
+#contact h3 {
+    color: white;
+    font-family: 'Balthazar', serif;
+    font-size: 30px;
+    margin: 0 ;
+    padding-top: 20%;
+    text-align: center;   
+}
+
+#contact h4 {
+    color: white;
+    font-family: 'Balthazar', serif;
+    font-size: 30px;
+    margin: 0 ;
+    padding-top: 10%;
+    text-align: center;   
+}
+
+#contact ul li {
+    display: inline-block;
+    width: 100%;
+}
+
+#contact ul img {
+    font-size: 32px;
+    padding-left: 240px;
+    padding-top: 15px;
+}
+
+#contact h2 {
+    color: white;
+    font-size: 46px;
+    font-family: 'Balthazar', serif;
+    text-align: center;
+    margin: 0 ;
+}
+
 /* For mobile phones: */
 [class*="col-"] {
   width: 100%;
