--- a/css/main.css
+++ b/css/main.css
@@ -136,6 +136,7 @@ header h1 {
     font-family: 'Balthazar', serif;
     text-align: center;
     margin: 0 ;
+    padding-left: 4.5%;
 }
 
 /* For mobile phones: */
