--- a/css/main.css
+++ b/css/main.css
@@ -8,15 +8,16 @@
   display: table;
 }
 
-[class*="col-"] {
-  float: left;
+/**  float: left;
   padding: 15px;
 }
+**/
 
 
 body, html {
     height: 100%;
     font-size: 16px;
+    max-width: 1200px;
   }
   
   .parallax {
@@ -24,22 +25,22 @@ body, html {
     background-image: url('../img/82.jpg');
 
   /* Full height */
-    height: 100%; 
+    height: 100%;
+    max-width: 1200px;
 
   /* Create the parallax scrolling effect */
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
-    background-size: cover;   
-    transition: 0s linear;
-    transition-property: background-position;
+    background-size: cover;
     }
 
 header {
     background: rgba(255, 255, 255, .0);
     position: fixed;
-    top: 2%;
-    width: 97%;
+    top: 1%;
+    width: 100%;
+    max-width: 1200px;
     height: auto;
     justify-content: : center;
     display: flex;
@@ -53,9 +54,9 @@ header h1 {
     background: white;
     position: absolute;
     top: 52%;
-    width: 98.35%;
+    width: 100%;
+    max-width: 1200px;
     height: auto;
-    margin: 0 auto;
 }
 
 #services p {
@@ -70,7 +71,8 @@ header h1 {
     background: white;
     position: absolute;
     top: 140%;
-    width: 98.35%;
+    width: 100%;
+    max-width: 1200px;
     height: auto;
 }
 
@@ -97,7 +99,8 @@ header h1 {
     background-size: cover;
     position: absolute;
     top: 200%;
-    width: 98.35%;
+    width: 100%;
+    max-width: 1200px;
     height: auto;
 }
 
@@ -121,7 +124,6 @@ header h1 {
 
 #contact ul li {
     display: inline-block;
-    width: 98%;
 }
 
 #contact ul img {
@@ -139,12 +141,16 @@ header h1 {
     padding-left: 4.5%;
 }
 
+footer {
+  max-width: 1200px;
+}
+
 /* For mobile phones: */
 [class*="col-"] {
   width: 100%;
 }
 
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 768px) and (max-width: 1200px) {
   /* For desktop: */
   .col-1 {width: 8.33%;}
   .col-2 {width: 16.66%;}
@@ -160,7 +166,7 @@ header h1 {
   .col-12 {width: 100%;}
 }
 
-@media only screen and (max-device-width: 1366px) {
+@media only screen and (max-device-width: 1400px) {
   .parallax {
     background-attachment: scroll;
   }
