--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,9 @@
+/**
 {
   box-sizing: border-box;
 }
 
-.row::after {
+/**.row::after {
   content: "";
   clear: both;
   display: table;
@@ -17,6 +18,7 @@
 body, html {
     height: 100%;
     font-size: 16px;
+    width: 100%;
     max-width: 1200px;
   }
   
@@ -41,7 +43,6 @@ header {
     top: 1%;
     max-width: 1200px;
     height: auto;
-    display: flex;
 }
 
 header h1 {
@@ -104,7 +105,6 @@ header h1 {
     color: white;
     font-family: 'Balthazar', serif;
     font-size: 1.875em;
-    margin: 0 ;
     padding-top: 20%;
     text-align: center;   
 }
@@ -113,7 +113,6 @@ header h1 {
     color: white;
     font-family: 'Balthazar', serif;
     font-size: 1.875em;
-    margin: 0 ;
     padding-top: 10%;
     text-align: center;   
 }
@@ -124,7 +123,6 @@ header h1 {
 
 #contact ul img {
     font-size: 1.94em;
-    padding-left: 240px;
     padding-top: 15px;
 }
 
@@ -132,13 +130,12 @@ header h1 {
     color: white;
     font-size: 2.88em;
     font-family: 'Balthazar', serif;
-    text-align: center;
-    margin: 0 ;
+    text-align: center
     padding-left: 4.5%;
 }
 
 footer {
-  max-width: 1200px;
+    max-width: 1200px;
 }
 
 /* For mobile phones: */
