--- a/css/main.css
+++ b/css/main.css
@@ -1,27 +1,27 @@
-/**
+
 {
   box-sizing: border-box;
 }
 
-/**.row::after {
+.row::after {
   content: "";
   clear: both;
   display: table;
 }
 
-/**  float: left;
+  float: left;
   padding: 15px;
 }
-**/
 
 
-body, html {
+
+body, html, main, section {
     height: 100%;
     font-size: 16px;
     width: 100%;
     max-width: 1200px;
   }
-  
+  /**
   .parallax {
   /* The image used */
     background-image: url('../img/82.jpg');
@@ -36,7 +36,7 @@ body, html {
     background-repeat: no-repeat;
     background-size: cover;
     }
-
+    **/
 header {
     background: rgba(255, 255, 255, .0);
     position: fixed;
