--- a/css/main.css
+++ b/css/main.css
@@ -20,6 +20,11 @@ body, html, main, section {
     font-size: 16px;
     width: 100%;
     max-width: 1200px;
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font: inherit;
+    vertical-align: baseline;
   }
   /**
   .parallax {
